fix: fixed z-index again

--- a/src/pages/inventory/components/InventoryReport/inventoryReport.module.scss
+++ b/src/pages/inventory/components/InventoryReport/inventoryReport.module.scss
@@ -17,7 +17,7 @@
     left: 0;
     background-color: #ffffff;
     padding: 10px 0 0 0;
-    z-index: 2000;
+    z-index: 100;
     .title {
       @include h3;
       letter-spacing: 0.03em;
@@ -149,7 +149,7 @@ thead th {
   position: sticky;
   top: 55px;
   background: white;
-  z-index: 2000;
+  z-index: 100;
 }
 
 tbody td {
